Scrollbar estilizado para la seccion de agregar productos /  imagenes, tambien arreglado bug de las imagenes

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+:root {
+    --primary-color: #fff;
+    --secondary-color: #000;
+}
 
 .bounceAnimation {
     animation-name: bounceAnimation;
@@ -22,4 +25,24 @@
     100% {
         transform: translateY(0);
     }
+}
+
+/* width */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: theme('colors.neutral');
+}
+
+/* Handle */
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background: theme('colors.primary');
+}
+
+/* Handle on hover */
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: theme('colors.secondary');
 }
